# decompose

./: CMakeLists.txt  README.md
include/decompose/: decompose.hpp  decompose_with_structured_binding.hpp  generate_decompose_with_structured_binding.py
include/decompose/detail/: decompose_with_structured_binding.hpp  generate_decompose_with_structured_binding.py  util.hpp
include/decompose/integration/: cereal.hpp
test/: test_cereal_integration.cpp  test_decompose.cpp
